Renomeado estilo botão primário do style_professor.css

--- a/Frontend/src/style_professor.css
+++ b/Frontend/src/style_professor.css
@@ -31,13 +31,13 @@ body {
 }
 
 /* ======== BOTÕES ======== */
-.btn-primary { 
+.btn-prim { 
   background-color: #152295; /* Roxo principal */
   border: none; 
   color: white;
 }
 
-.btn-primary:hover { 
+.btn-prim:hover { 
   background-color: #6e83af; /* Roxo de destaque */
 }
 
